updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Quincy, IL in the western part of Illinois</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like enjoy movies, video games, sporting events and reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I want to create solutions for the oonline problems of everyday people.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Belleville, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There are so many things you can do as a web developer. I want to use the skills I learn to create something special.</p>
     </section>
 
     <footer id="footer">
